<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="manoj_thakur">Manoj Thakur</string>
    <string name="from">From</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account Login ?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="reel">Reel</string>
    <string name="profile">Profile</string>
    <string name="bio">bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_post">Add Post</string>
    <string name="upload_reel">Upload Reel</string>
    <string name="write_a_caption">write a caption</string>
    <string name="share_to_post">Share to post</string>
    <string name="your_videos_may_appear_in_posts_and_can_be_seen_in_the_posts_tab_of_your_profile">Your videos may appear in Posts and can be seen in the Posts tab of your profile</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="post_image">Post Image</string>
    <string name="select_reel_from_gallary">Select Reel From Gallary</string>
    <string name="caption">Caption</string>
    <string name="this_is_temporary_video_description">This is temporary video description</string>
    <string name="message">Message</string>
    <string name="like">Like</string>
    <string name="postimage">postImage</string>
    <string name="comment">comment</string>
    <string name="save">save</string>
    <string name="time">time</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="your_story">Your Story</string>
</resources>