<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/name"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/time"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profile"
            android:contentDescription="@string/postimage" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_temporary_video_description"
            android:textSize="16sp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/ivSave"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/save" />

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:src="@drawable/message"
                app:layout_constraintBottom_toBottomOf="@+id/ivLike"
                app:layout_constraintStart_toEndOf="@+id/ivLike"
                app:layout_constraintTop_toTopOf="@+id/ivLike"
                android:contentDescription="@string/comment" />

            <ImageView
                android:id="@+id/ivLike"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/save" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
