<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Post.PostActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="New Post"/>

    <ImageView
        android:id="@+id/image"
        android:padding="20dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/post"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="10dp"
        android:hint="@string/write_a_caption"
        app:boxStrokeColor="@color/Pink"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add_post"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/share_to_post"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_videos_may_appear_in_posts_and_can_be_seen_in_the_posts_tab_of_your_profile"
        android:layout_margin="10dp"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="2"
        >


        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_weight="1"
            app:strokeColor="@color/Pink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:layout_margin="10dp"


 />


        <Button
            android:id="@+id/btnPost"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/Blue"
            android:text="@string/post"
            android:textSize="18sp"
            android:layout_margin="10dp"
             />
    </LinearLayout>


</LinearLayout>
