<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/instaImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/instagram"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instaImg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/constri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        style="@style/Widget.Material3.Button.Icon"
        android:id="@+id/btnLogIn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/log_in"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />


    <Button
        android:id="@+id/btnSignUp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_new_account"
        android:textColor="@color/Blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogIn"
        app:layout_constraintStart_toStartOf="@+id/btnLogIn"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        app:layout_constraintVertical_bias="0.53" />

</androidx.constraintlayout.widget.ConstraintLayout>