<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Post.ReelsActivity"
    android:orientation="vertical">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Add reel"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        />
    <!--        <TextView-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            />-->

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="50dp"
        >
        <ImageView
            android:id="@+id/imView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/reel"
            />
        <Button
            android:id="@+id/selectReel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_reel_from_gallary"
            android:backgroundTint="@color/Blue"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"

            />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/caption"
        app:boxStrokeColor="@color/Pink"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/addPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add_post"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Share to reel"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_videos_may_appear_in_posts_and_can_be_seen_in_the_posts_tab_of_your_profile"
        android:layout_margin="10dp"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="2"
        >


        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_weight="1"
            app:strokeColor="@color/Pink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:layout_margin="10dp"


            />


        <Button
            android:id="@+id/btnUpload"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/Blue"
            android:text="Upload"
            android:textSize="18sp"
            android:layout_margin="10dp"
            />
    </LinearLayout>

</LinearLayout>